--- a/style.css
+++ b/style.css
@@ -48,8 +48,8 @@ body {
 }
 
 .section h3 {
-    color: #00796b;
-    border-bottom: 2px solid #00796b;
+    color: #2e8075;
+    border-bottom: 2px solid #012823;
     padding-bottom: 5px;
     margin-bottom: 10px;
 }
